--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "hallycoins",
+  "description": "idle",
+  "version": "1.0.0",
+  "engines": {
+    "node": "16.0.0"
+    },
+ 
   "scripts": {
     "start": "node index.js"
  },
