--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "idle",
   "version": "1.0.0",
   "engines": {
-    "node": "16.0.0"
+    "node": "16.0.0",
+    "npm": "7.10.0"
   },
   "scripts": {
     "start": "node back.js"
